[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyorca"
version = "0.1.0"
description = "Minimal, readable ORCA implementation in PyTorch."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "rich>=14.2.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.15.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tinyorca*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "C4",
]
ignore = [
    "E501",
]
